Update readme notes

--- a/Tutorial.ipynb
+++ b/Tutorial.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d0d9584a",
+   "id": "72dee8cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4b9a77cc",
+   "id": "231effb2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "dd3711c7",
+   "id": "eeba2197",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9537d22",
+   "id": "a55d4de5",
    "metadata": {},
    "source": [
     "## Local homology at the intersection of two segments"
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "09f931be",
+   "id": "df3d8dce",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df3437cd",
+   "id": "2029b76b",
    "metadata": {},
    "source": [
     "### $\\alpha$-filtration\n",
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "64b82bc5",
+   "id": "67a292cb",
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "1016cdaf",
+   "id": "964e0a75",
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd6e2f83",
+   "id": "27f62902",
    "metadata": {},
    "source": [
     "We see indeed 3 prominent points in $H_1$, what corresponds to the 4 branches coming out from the center."
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d63ec79b",
+   "id": "97d0cacf",
    "metadata": {},
    "source": [
     "### $r$ filtration\n",
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "2806480a",
+   "id": "37ff83ad",
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "948ffa94",
+   "id": "183e4286",
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bef8fd33",
+   "id": "0f4e74dd",
    "metadata": {},
    "source": [
     "### Different center\n",
@@ -254,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "5fd9766d",
+   "id": "6169812c",
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "0538b3dc",
+   "id": "b07e4f42",
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "995996ef",
+   "id": "ce94554f",
    "metadata": {},
    "source": [
     "There is one (persistent) point in $H_1$, as expected."
@@ -319,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "a807664e",
+   "id": "444d36e5",
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc5f03c4",
+   "id": "e103e483",
    "metadata": {},
    "source": [
     "This diagram is more interesting. Remember that we are quotienting by everything but a smaller and smaller neighborhood.\n",
@@ -368,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "58e1a6bb",
+   "id": "56ea7bd2",
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83900da2",
+   "id": "213864f8",
    "metadata": {},
    "source": [
     "An interesting question is what happens when we place the point closer to the intersection point, so that the bottom-left endpoint of the segment is outside of the ball while the intersection is still inside. Let us examine that situation for both filtrations."
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "fa6902b6",
+   "id": "ba0fb4f8",
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "4866512b",
+   "id": "bdf02542",
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8dc0ed0c",
+   "id": "e53c0ee3",
    "metadata": {},
    "source": [
     "For the $r-$filtration, it does not change much. We have the same number of points, but now, all bars live through (an interval that includes) $[0.33, 0.39]$.\n",
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "607e3de5",
+   "id": "b12b2cef",
    "metadata": {},
    "source": [
     "## Densely sampled square"
@@ -494,7 +494,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "90fe3816",
+   "id": "f5a25a7a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +504,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "d5c73519",
+   "id": "8930e93a",
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "c4e59eaa",
+   "id": "02afc9aa",
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "81c87376",
+   "id": "1994fd36",
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "830ab011",
+   "id": "220bb6b0",
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eee1ab61",
+   "id": "80275dcd",
    "metadata": {},
    "source": [
     "Both diagrams show some $H_2$, but it's not very persistent."
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d56e8018",
+   "id": "735d8090",
    "metadata": {},
    "source": [
     "## Sphere"
@@ -621,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "226754b3",
+   "id": "9e3680c4",
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +648,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "9a018250",
+   "id": "f912f69d",
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "9f09c77c",
+   "id": "ddbb87c8",
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +704,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "4677438e",
+   "id": "849ee114",
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "286530e9",
+   "id": "dca5fb1f",
    "metadata": {},
    "outputs": [
     {
@@ -755,16 +755,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46ab4161",
+   "id": "baa02b47",
    "metadata": {},
    "source": [
-    "For the $\\alpha$-filtration, the expanding boundary seems to fill out the interior too quickly for $H_2$ to appear. Indeed, if we disable this behavior, we observe a non-trivial $2$-dim hole. For the $r-$filtration, this appears immediately, and stays quite long. Of course, this is due to a good scale choice for Rips."
+    "For the $\\alpha$-filtration, the expanding boundary seems to fill out the interior too quickly for $H_2$ to appear. Indeed, if we disable this behavior, we observe a non-trivial $2$-dim hole. This shows that the expanding boundary behavior might be capturing something else than the local homology.\n",
+    "\n",
+    "For the $r-$filtration, this appears immediately, and stays quite long. Of course, this is due to a good scale choice for Rips."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8efbeb3a",
+   "id": "7ec3763a",
    "metadata": {},
    "outputs": [],
    "source": []
