Add text for the rectangle interpretation of the diagram

--- a/notebooks/Tutorial.ipynb
+++ b/notebooks/Tutorial.ipynb
@@ -371,7 +371,7 @@
     "\n",
     "There are three points in total. Two appear, and die, for high parameter values, namely $[0.38, 075]$ is an interval where they both persist. In this particular example, we should be able to see them for $r= 0.6$. Visual inspection confirms that the $r$-ball contains the intersection of lines and so that the points correspond to things happening \"far\" from the localization point.\n",
     "\n",
-    "The point closer to the origin persists through $(0.03, 0.33)$. Let's inspect $r=0.2$. We see that we recover the correct homology in that interval."
+    "The point closer to the origin persists through $(0.03, 0.33)$. Let's inspect $r=0.2$ and $r=0.5$. We see that we recover the correct homology in that interval. The homology can be read-off as the number of points in the rectangle $\\rbrack-\\infty,r\\rbrack\\times\\rbrack r, \\infty\\lbrack$ in the diagram."
    ]
   },
   {
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "dfd3cf41",
+   "id": "c4004847",
    "metadata": {},
    "outputs": [
     {
