Dim zero warning for r filtr

--- a/notebooks/Tutorial.ipynb
+++ b/notebooks/Tutorial.ipynb
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "6ea4fa65",
+   "id": "227b6185",
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
    "source": [
     "### $r$ filtration\n",
     "\n",
-    "We fix a Rips-scale $\\alpha$ and we build the filtration by considering a smaller and smaller neighborhood around $x_0$."
+    "We fix a Rips-scale $\\alpha$ and we build the filtration by considering a smaller and smaller neighborhood around $x_0$. **Since the homology is computed via duality theorems, we do not get $H_0$.**"
    ]
   },
   {
@@ -574,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "c418ea15",
+   "id": "c4383428",
    "metadata": {
     "scrolled": false
    },
@@ -616,7 +616,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "6a6b09cf",
+   "id": "f425fa1a",
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28ea909b",
+   "id": "c48854c4",
    "metadata": {},
    "source": [
     "For the $\\alpha$-filtration, it does not change anything, since the intersection point is not in the $\\epsilon$-ball of the center $(0,0)\\notin B(x, \\epsilon)$."
@@ -1057,7 +1057,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "156aeec9",
+   "id": "25e2fb2e",
    "metadata": {},
    "outputs": [],
    "source": [
